# scoreboard_parser_owcs

./: .gitignore  README.md  projectplan.md  pyproject.toml
debug/: compare_preprocessing.py  region_picker.py  show_columns.py  show_edges.py  test_digit_matching.py  test_frame_processing.py  test_hero_matching.py  test_ocr.py  test_preprocessing.py  test_role_matching.py  test_single_frame.py  test_ultimate_detection.py  test_utilities.py
src/: capture.py  crop_portraits.py  digit_matcher.py  process.py  recognize.py  region_picker.py  regions.py  utils.py
