[project]
name = "overwatch-stats"
version = "0.1.0"
description = "Extract player statistics from Overwatch 2 replay viewer"
requires-python = ">=3.12"
dependencies = [
    "mss",
    "opencv-python",
    "pillow",
    "paddleocr",
    "pandas",
    "imagehash",
]

[project.optional-dependencies]
# pynput requires evdev on Linux which needs kernel headers
# On Windows, install with: uv pip install pynput
keyboard = ["pynput"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

