[project]
name = "overwatch-stats"
version = "0.1.0"
description = "Extract player statistics from Overwatch 2 replay viewer"
requires-python = ">=3.12"
dependencies = [
    "mss",
    "opencv-python",
    "pillow",
    "paddleocr>=3.3.0,<3.4",
    "paddlepaddle>=3.2.0,<3.3",
    "pandas",
    "imagehash",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
# pynput requires evdev on Linux which needs kernel headers
# On Windows, install with: uv pip install pynput
keyboard = ["pynput"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

